--- a/finals/CG2023_cheatsheet_finals.tex
+++ b/finals/CG2023_cheatsheet_finals.tex
@@ -1373,7 +1373,7 @@
     \textbf{\uline{9.3 Sampling Bandpass Signal below Nyquist}}
 
     \begin{enumerate}[label=(\alph*)]
-        \item Overlapping spectral images ($f_c > 0.5B$)
+        \item Overlapping spectral images ($f_c > 0.5B$, symmetric about $f_c$ and $f_{-c}$)
         \[
             f_s = 2f_c / k; \quad k = 1,2,\ldots, \lfloor 2f_c/B \rfloor \tag{9.2a}
         \]
