--- a/finals/CG2023_cheatsheet_finals.tex
+++ b/finals/CG2023_cheatsheet_finals.tex
@@ -60,11 +60,11 @@
 \fontsize{6}{8}\selectfont
 \fontfamily{qcs}\selectfont
 \begin{multicols*}{5}
-    % \textbf{Euler's formula}
-    % \begin{align*}
-    %     e^{j\theta}=\cos(\theta) + j\sin(\theta)\\
-    %     e^{-j\theta}=\cos(\theta)-j\sin(\theta)
-    % \end{align*}
+    \textbf{Euler's formula}
+    \begin{align*}
+        e^{j\theta}=\cos(\theta) + j\sin(\theta)\\
+        e^{-j\theta}=\cos(\theta)-j\sin(\theta)
+    \end{align*}
 
     \textbf{\uline{Chapter 1}}
 
