Add Chapter 8 page 13

--- a/finals/CG2023_cheatsheet_finals.tex
+++ b/finals/CG2023_cheatsheet_finals.tex
@@ -57,7 +57,7 @@
 }
 
 \begin{document}
-\fontsize{6}{8}\selectfont
+\fontsize{6}{7}\selectfont
 \fontfamily{qcs}\selectfont
 \begin{multicols*}{5}
     \textbf{Euler's formula}
@@ -698,7 +698,7 @@
 
     \textbf{5.3.2.4 M\% Power Containment Bandwidth}
 
-    The smallest bandwidth that contains at least M\% of the average signal power. For a periodic signal, the aerage power is given by
+    The smallest bandwidth that contains at least M\% of the average signal power. For a periodic signal, the average power is given by
     \[
         P = \int_{-\infty}^{\infty}P_x(f)df=\sum_{k=-\infty}^{\infty}|c_k|^2
     \]
@@ -1317,6 +1317,10 @@
     \begin{align*}
         \left[\text{No. of} \int dt - \text{No. of } \frac{d}{dt}\right] \times (-20 \text{ dB/decade}) \tag{8.5a}
     \end{align*}
+
+    \textbf{Resonant frequency: }$\omega_r = \omega_n(1 - 2 \zeta ^2)^{0.5}$
+
+    \textbf{Resonant peak: }$\left|\tilde{H}(j \omega_r) = \frac{K}{2 \zeta (1 - \zeta^2)^{0.5}}\right|$
 
     \textbf{\uline{Chapter 9}}
 
